--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,9 @@
   padding: 20px;
   white-space: pre-wrap;
 "></div>
-    <div id="root"></div>
+    <div id="root">
+      <div>MSSV: 18120593 - Họ Tên: Trần Quang Tiến </div>
+    </div>
     <script>
       window.addEventListener('mousedown', function(e) {
         document.body.classList.add('mouse-navigation');
